name:           free-algebras
version:        0.0.5.0
synopsis:       Free algebras in Haskell.
description:    Universal algebra approach to free algebras including higher kinded algebraic structures like functors, applicative functors or monads.
category:       Algebra, Control, Monads
homepage:       https://github.com/coot/free-algebras#readme
bug-reports:    https://github.com/coot/free-algebras/issues
author:         Marcin Szamotulski
maintainer:     profunctor@pm.me
copyright:      (c) 2018 Marcin Szamotulski
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md
tested-with:    GHC==8.0.2, GHC==8.2.2, GHC==8.4.3

source-repository head
  type: git
  location: https://github.com/coot/free-algebras

flag develop
  description: Set -Werror flag
  manual: True
  default: False

library
  exposed-modules:
      Control.Algebra.Free
      Control.Monad.Action
      Data.Algebra.Free
      Data.Algebra.Pointed
      Data.Group.Free
      Data.Monoid.Abelian
      Data.Monoid.MSet
      Data.Semigroup.Abelian
      Data.Semigroup.SemiLattice
      Data.Semigroup.SSet
  other-modules:
      Paths_free_algebras
  hs-source-dirs:
      src
  default-extensions: ConstraintKinds DataKinds DeriveFunctor EmptyDataDecls FlexibleInstances FlexibleContexts KindSignatures InstanceSigs MultiParamTypeClasses OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables TupleSections TypeApplications TypeFamilies
  build-depends:
      base            >= 4.9 && <5
    , constraints     >= 0.8 && <0.11.0 
    , containers      >= 0.4.2 && <0.7
    , data-fix                  <0.3
    , dlist           >= 0.8 && <0.9
    , free            >= 4.0 && <6.0
    , groups          >= 0.3 && <0.5
    , kan-extensions  >= 4.1 && <6.0
    , mtl             >= 2.2 && <2.3
    , natural-numbers >= 0.1 && <0.2
    , transformers    >= 0.5 && <0.6
  if flag(develop)
    ghc-options: -Werror -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-deprecations
  else
    ghc-options: -Wall -Wincomplete-record-updates -Wincomplete-uni-patterns -Wredundant-constraints -Wno-deprecations
  default-language: Haskell2010

test-suite free-algebras-test
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Test.Control.Algebra.Free
      Test.Data.Algebra.Free
      Test.Data.Group.Free
      Paths_free_algebras
  hs-source-dirs:
      test
  default-extensions: ConstraintKinds DataKinds DeriveFunctor EmptyDataDecls FlexibleInstances FlexibleContexts KindSignatures InstanceSigs MultiParamTypeClasses OverloadedStrings PolyKinds RankNTypes ScopedTypeVariables TupleSections TypeApplications TypeFamilies
  ghc-options: -threaded -rtsopts -with-rtsopts=-N
  build-depends:
      base            >= 4.9 && <5
    , constraints
    , containers
    , data-fix
    , dlist
    , free
    , free-algebras
    , groups
    , hedgehog
    , kan-extensions
    , mtl
    , natural-numbers
    , transformers
  default-language: Haskell2010
