name:           free-algebras
version:        0.0.8.0
synopsis:       Free algebras in Haskell.
description:    Universal algebra approach to free algebras including higher
                kinded algebraic structures like functors, applicative
                functors, monads or categories .
category:       Algebra, Control, Monads
homepage:       https://github.com/coot/free-algebras#readme
bug-reports:    https://github.com/coot/free-algebras/issues
author:         Marcin Szamotulski
maintainer:     profunctor@pm.me
copyright:      (c) 2018-2019 Marcin Szamotulski
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
cabal-version:  >= 1.10
extra-source-files:
    ChangeLog.md
    README.md
tested-with:    GHC==8.0.2, GHC==8.2.2, GHC==8.4.4, GHC==8.6.3, GHC==8.8.1

source-repository head
  type: git
  location: https://github.com/coot/free-algebras

library
  exposed-modules:
      Control.Algebra.Free
      Control.Algebra.Free2
      Control.Monad.Action
      Data.Algebra.Free
      Data.Algebra.Pointed
      Data.Group.Free
      Data.Monoid.Abelian
      Data.Semigroup.Abelian
      Data.Semigroup.Semilattice
  hs-source-dirs:
      src
  build-depends:
      base            >= 4.9 && <5
    , containers      >= 0.4.2 && <0.7
    , data-fix                  <0.3
    , dlist           >= 0.8 && <0.9
    , free            >= 4.0 && <6.0
    , groups          >= 0.3 && <0.5
    , kan-extensions  >= 4.1 && <6.0
    , mtl             >= 2.2 && <2.3
    , transformers    >= 0.5 && <0.6
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-deprecations
  default-language: Haskell2010

test-suite test-free-algebras
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Control.Algebra.Free
      Control.Algebra.Free2
      Control.Monad.Action
      Data.Algebra.Free
      Data.Algebra.Pointed
      Data.Group.Free
      Data.Monoid.Abelian
      Data.Semigroup.Abelian
      Data.Semigroup.Semilattice
      Test.Control.Algebra.Free
      Test.Data.Algebra.Free
      Test.Data.Group.Free
  hs-source-dirs:
      test
      src
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Wall
  build-depends:
      base           >= 4.9 && < 5
    , containers
    , data-fix
    , dlist
    , free
    , groups
    , hedgehog       >= 0.6 && < 1.1
    , kan-extensions
    , mtl
    , transformers
  default-language: Haskell2010
