cabal-version:  3.4
name:           free-algebras
version:        0.1.2.0
synopsis:       Free algebras
description:
  Algebraic approach to free algebras, inspired by Univeral Algebra and
  Category Theory, including higher kinded algebraic structures like functors,
  applicative functors, monads or categories.
category:       Algebra, Control, Monads
homepage:       https://github.com/coot/free-algebras#readme
bug-reports:    https://github.com/coot/free-algebras/issues
author:         Marcin Szamotulski
maintainer:     coot@coot.me
copyright:      (c) 2018-2024 Marcin Szamotulski
license:        MPL-2.0
license-file:   LICENSE
build-type:     Simple
extra-source-files:
    ChangeLog.md
    README.md
stability:      experimental
tested-with:    GHC == { 8.10, 9.0, 9.2, 9.4, 9.6, 9.8, 9.10 }

source-repository head
  type: git
  location: https://github.com/coot/free-algebras


common ghc-options
  ghc-options:
    -Wall
    -Wincomplete-record-updates
    -Wincomplete-uni-patterns
    -Wredundant-constraints
    -Wno-deprecations


library
  import: ghc-options
  exposed-modules:
      Control.Algebra.Free
      Control.Algebra.Free2
      Control.Monad.Action
      Data.Algebra.Free
      Data.Algebra.Pointed
      Data.Group.Free
      Data.Monoid.Abelian
      Data.Semigroup.Abelian
      Data.Semigroup.Semilattice
  hs-source-dirs:
      src
  build-depends:
      base            >= 4.9 && <5
    , containers      >= 0.4.2 && <0.8
    , data-fix                  <0.4
    , dlist           >= 0.8 && <1.1
    , free            >= 4.0 && <6.0
    , groups          >= 0.3 && <0.6
    , kan-extensions  >= 4.1 && <6.0
    , mtl             >= 2.2 && <2.4
    , transformers    >= 0.5 && <0.7
  default-language: Haskell2010

test-suite test-free-algebras
  type: exitcode-stdio-1.0
  main-is: Main.hs
  other-modules:
      Control.Algebra.Free
      Control.Algebra.Free2
      Control.Monad.Action
      Data.Algebra.Free
      Data.Algebra.Pointed
      Data.Group.Free
      Data.Monoid.Abelian
      Data.Semigroup.Abelian
      Data.Semigroup.Semilattice
      Test.Control.Algebra.Free
      Test.Data.Algebra.Free
      Test.Data.Group.Free
  hs-source-dirs:
      test
      src
  ghc-options:
      -threaded
      -rtsopts
      -with-rtsopts=-N
      -Wall
  build-depends:
      base           >= 4.9 && < 5
    , containers
    , data-fix
    , dlist
    , free
    , groups
    , hedgehog       >= 0.6 && < 1.6
    , kan-extensions
    , mtl
    , transformers
  default-language: Haskell2010
